Major update v3 (#323)
* remove Coinbase

* Remove Transparent Redirect

* Remove iDeal

* Remove SEPA, EuropeBankAccount and IbanBankAccount references

Based on research, these modules were part of responses for older
integrations that are no longer supported.

* fixup! whoops forgot some EU Bank account stuff

* remove deprecated modules, classes, functions, params, and attributes

* Remove deprecated getRows tests

Signed-off-by: David Merino <david.merino@getbraintree.com>

* WIP - remove transaction level fee report????

Signed-off-by: Holly Stotelmyer <holly.stotelmyer@getbraintree.com>

* Major version notes and unit test fixes

Signed-off-by: Josh Larson <joshua.larson@getbraintree.com>

* fixup! Major version notes and unit test fixes

* Update transactions and subscription integration tests

Signed-off-by: Holly Stotelmyer <holly.stotelmyer@getbraintree.com>

* remove deprecated oAuth integration test

Signed-off-by: Josh Larson <joshua.larson@getbraintree.com>

* Fix tag versus category in DisputeIT

Signed-off-by: Josh Larson <joshua.larson@getbraintree.com>

* Remove GRANTED_PAYMENT_INSTRUMENT_UPDATE and make Validation Error Codes final

* Remove inapplicable TODO's

Signed-off-by: Holly Stotelmyer <holly.stotelmyer@getbraintree.com>

* Fix UNKOWN_VALIDATION_ERROR --> UNKNOWN_VALIDATION_ERROR

Signed-off-by: Josh Larson <joshua.larson@getbraintree.com>

* Remove ... apache?

Signed-off-by: Holly Stotelmyer <holly.stotelmyer@getbraintree.com>

* Revert "Remove ... apache?"

This reverts commit 89a46bf022e89165ded9d772baee30641c6cc188.

* Remove unnecessary deprecation warnings

* put back TLFR

Signed-off-by: Josh Larson <joshua.larson@getbraintree.com>

* fixup! put back TLFR

Signed-off-by: Holly Stotelmyer <holly.stotelmyer@getbraintree.com>

* fixup! fixup! put back TLFR

Signed-off-by: Josh Larson <joshua.larson@getbraintree.com>

* fixup! fixup! fixup! put back TLFR

Signe